--- a/src/components/pages/home.styles.scss
+++ b/src/components/pages/home.styles.scss
@@ -112,6 +112,7 @@ section {
   }
   .button {
     margin-right: 15px;
+    margin-top: 1rem;
     color: white;
     background: rgb(40, 40, 40);
     border-radius: 4px;
